--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta name="Description" content="Enter your description here"/>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css">
-        <script src="/hw/main.js" defer></script>
+        <script src="/main.js" defer></script>
         <title>Pokemon</title>
     </head>
     <body>
